# fmr

./: '  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
.circleci/: config.yml
.github/workflows/: build-release.yml  c-cpp.yml  codeql-analysis.yml
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1
build-aux/: depcomp
crates/cache/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  path.rs
crates/egui/: Cargo.toml
crates/egui/src/: event.rs  key.rs  lib.rs
crates/egui/src/tools/: archive.rs  image.rs  zip.rs
crates/explorer/: Cargo.toml
crates/explorer/src/: cache.rs  item_view.rs  lib.rs  loader.rs  view.rs
crates/frame/: Cargo.toml
crates/frame/src/: lib.rs  reader.rs  texture.rs
crates/main/: Cargo.toml
crates/main/src/: app.rs  app_explorer.rs  app_reader.rs  image_search.rs  inspection.rs  lib.rs  main.rs  storage.rs
crates/reader/: Cargo.toml
crates/reader/src/: lib.rs  loader.rs  paged.rs  sizer.rs  vertical.rs
crates/scroll/: Cargo.toml
crates/scroll/src/: lib.rs
include/fmr/bitmap/: bitmap.h  bitmap_ctrl.h  bitmap_draw.h  bitmap_page.h  bitmap_page_ctrl.h  bitmap_vector_event.h  bmp.h  image_checker.h  image_util.h  inc.h  loader.h  page_bitmap_ctrl.h  page_loader.h  position.h  position_ctrl.h  rescale_loader.h  rescaler.h  size.h
include/fmr/common/: bitmask.h  compare.h  config.h  dimension.h  event.h  path.h  range.h  rect.h  string.h  vector.h
include/fmr/compare/: char_modifier.h  comparator.h  comparer.h  natural.h  sortable.h  string.h
include/fmr/explorer/: common.h  controller.h  controller_explorer.h  find_explorer.h  image_cell_explorer.h  image_window_explorer.h  load_explorer.h  string_draw.h  string_rect.h  window_explorer.h
include/fmr/file_handler/: default_factory.h  factory.h  handler.h  input.h  input_base_helper.h  input_implementer_helper.h  input_iterator.h  memory_stream.h  output.h  read_stream.h  stream.h  write_stream.h  write_type.h
include/fmr/find/: builder.h  checker.h  context.h  find.h
include/fmr/fs/: context.h  filesystem.h  find.h  iterator.h  provider.h
include/fmr/gui/: frame.h  (+3 more)
src/: CMakeLists.txt  app.cpp  app.h  app.rs  app_explorer.rs  app_reader.rs  config.cpp  config.h  filehandler.cpp  filehandler.h  frame.cpp  frame.h  image_search.rs  inspection.rs  key.rs  lib.rs  main.rs  panel.cpp  panel.h  path.rs  scroll.rs  storage.rs  traverser.cpp  traverser.h  wake.rs
src/base/: bitmask.h  bmp.h  compare.cpp  compare.h  config.h  dimension.h  path.cpp  path.h  range.h  string.h  vector.h
src/bitmap/: bitmap.cpp  bitmap.h  bitmap_ctrl.cpp  bitmap_draw.cpp  bitmap_page_ctrl.cpp  bitmapvertical.cpp  bitmapvertical.h  bmp.cpp  bmp.h  image_checker.cpp  image_util.cpp  image_util.h  loader.cpp  page_bitmap_ctrl.cpp  page_loader.cpp  position.cpp  position.h  position_ctrl.cpp  rescale_loader.cpp  rescaler.cpp  size.cpp  size.h
src/bitmap/loader/: base.cpp  container.cpp  page.cpp  rescale.cpp  rescale_container.cpp
src/common/: compare.cpp  path.cpp
src/compare/: natural.cpp
src/explorer/: cache.rs  common.h  controller.cpp  controller_explorer.cpp  controller_explorer.h  find_explorer.cpp  find_explorer.h  image_cell_explorer.cpp  image_window_explorer.cpp  image_window_explorer.h  imagewindow.cpp  imagewindow.h  item_view.rs  load_explorer.cpp  load_explorer.h  loader.rs  loadthread.cpp  loadthread.h  mod.rs  string_draw.cpp  string_rect.cpp  view.rs  window.cpp  window.h  window_explorer.cpp  window_explorer.h
src/file_handler/: factory.cpp  memory_stream.cpp
src/file_handler/filesystem/: handler.cpp  input.cpp  output.cpp  read_stream.cpp
src/file_handler/virtual_write/: map.cpp
src/file_handler/wx/: input_stream.cpp
src/file_handler/wx_archive/: handler.cpp  input.cpp  output.cpp  read_stream.cpp
src/fs/: filesystem.cpp  find.cpp
src/gui/: accelerator_table.cpp  frame.cpp  frame.h  menu_item_toggler.cpp  panel.cpp  panel.h
src/handler/: abstract_handler.h  abstract_openable_handler.h  archivehandler.cpp  archivehandler.h  default_handler.cpp  default_handler.h  defaulthandler.cpp  defaulthandler.h  filehandler.cpp  filehandler.h  handler.cpp  handler.h  handler_factory.cpp  handler_factory.h  handlerfactory.cpp  handlerfactory.h  std_handler.cpp  std_handler.h  stream_util.cpp  struct_stream.cpp  struct_stream.h  wxarchive_handler.cpp  wxarchive_handler.h
src/image/: image.cpp  image.h  mod.rs  reader.rs  texture.rs
src/loader/: container.cpp  loader.cpp  page.cpp  rescale.cpp  rescale_container.cpp
src/main/: app.cpp  app.h
src/position/: box_ctrl.cpp  grid_ctrl.cpp
src/queue/: factory.cpp  find_handler.cpp  load_image.cpp  rescale.cpp
src/reader/: bmp.cpp  bmp.h  controller.cpp  controller_reader.cpp  controller_reader.h  decorator.cpp  decorator_ctrl.cpp  image.cpp  image.h  load_reader.cpp  load_reader.h  loader.rs  loadreader.cpp  loadreader.h  mod.rs  page_indicator.cpp  paged.rs  reader.cpp  reader.h  scroll_controller.cpp  sizer.rs  threadreader.cpp  threadreader.h  vertical.rs  window_reader.cpp  window_reader.h  windowreader.cpp  windowreader.h  zoom_reader.cpp  zoom_reader.h  zoomreader.cpp  zoomreader.h
src/thread/: controller_factory.cpp  find_handler.cpp  find_handler_controller.cpp  load_image.cpp  load_image_controller.cpp  rescale.cpp  thread.cpp  thread.h
src/tools/: archive.rs  image.rs  mod.rs  zip.rs
src/window/: decorator.cpp  flex_grid_cell_window.cpp  flex_grid_window.cpp  grid_cell_window.cpp  grid_item.cpp  grid_window.cpp  grid_window.h  menu_bar.cpp  scrolled_image.cpp  scrolledwindow.cpp  scrolledwindow.h  scrollevent.cpp  scrollevent.h  window.cpp  window.h
src/wx/: CMakeLists.txt
src/wx/archive/: archive.cpp  find.cpp
test/: Makefile.am  Makefile.in  file_handler.cpp  handler.cpp  mainbitmap.cpp  position.cpp  sort.cpp  watch.cpp
test/src/: .gitignore  Makefile  handler.cpp
tests/: CMakeLists.txt  fs_test.cpp
tests/testing/: mock_fs.cpp
tests/wx/: CMakeLists.txt  archive_test.cpp
(+119 files in other folders)
