[package]
name = "fmr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# egui = { version = "0.17.0", features = ["multi_threaded"] }
image = "0.24.5"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "fs"] }
rfd = "0.8.1"
parking_lot = { version = "0.12.0", features = ["serde"] }
natord = "1.0.9"
serde = "1.0"
ron = "0.7"
walkdir = "2.3"
futures = "0.3"
zip = "0.6"
libarchive = { git = "https://github.com/uskrai/libarchive-rust", rev = "7a5bf66f24b4870cb682024b6c60721de263b847" }
log = "0.4"
tracing = "0.1"
git-version = "0.3.5"
tap = "1.0"
json5 = "0.4"
directories-next = "2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
itertools = "0.10"
derivative = "2.2"
sha2 = "0.10.2"
turbojpeg = { version = "0.5.1", features = ["image"], optional = true }
# tracing-appender = "0.2"

[features]
turbojpeg = ["dep:turbojpeg"]

[dependencies.eframe]
# git = "https://github.com/emilk/egui"
version = "0.18.0"
features = ["persistence"]
# rev = "888cd9c3eb09b44995369aebe0034c5be01f1917"
[dependencies.egui]
# git = "https://github.com/emilk/egui"
version = "0.18.1"

# [profile.dev.package.image]
# opt-level = 3
# [profile.dev.package.color_quant]
# opt-level = 3
# [profile.dev.package.deflate]
# opt-level = 3
# [profile.dev.package.flume]
# opt-level = 3
# [profile.dev.package.gif]
# opt-level = 3
# [profile.dev.package.weezl]
# opt-level = 3
# [profile.dev.package.jpeg-decoder]
# opt-level = 3
# [profile.dev.package.png]
# opt-level = 3
# [profile.dev.package.crc32fast]
# opt-level = 3
# [profile.dev.package.miniz_oxide]
# opt-level = 3
# [profile.dev.package.tiff]
# opt-level = 3
# [profile.dev.package.flate2]
# opt-level = 3
