[package]
name = "fmr_frame"
version = "0.1.0"
edition = "2021"

[dependencies]
image.workspace = true
eframe.workspace = true
turbojpeg = { workspace = true, optional = true }
parking_lot.workspace = true
serde.workspace = true
tracing.workspace = true
tokio.workspace = true

[features]

turbojpeg = ["dep:turbojpeg"]
